--- a/docroot/devops/reinstall/vars/global_settings.yml
+++ b/docroot/devops/reinstall/vars/global_settings.yml
@@ -16,7 +16,7 @@ private_files_dir: "{{ sites_default_dir }}/files/private"
 php_env_vars: 'APP_ENV=dev' # APP_ENV=dev - this varible will be set at PR_BUILDER from CI shell executor.
 site_url: 'http://drupal.192.168.56.132.xip.io' # No trailing slash!
 # Site url to download assets via stage_file_proxy.
-origin_site_url: 'http://ymcatwincitiesdev.prod.acquia-sites.com'
+origin_site_url: 'https://www.ymcamn.org'
 # This variable will be used for variable_get('environment'). Can be overridden by CI server.
 # development = 'default', demo = 'demo', staging = 'staging', production = 'production'.
 pp_environment: 'default'
@@ -26,7 +26,7 @@ docker_sql: true
 docker_sql_db: drupal
 docker_sql_host: 172.18.0.2
 docker_registry: ymca.ffwua.com:5000
-docker_prod_image: ymca.ffwua.com:5000/dbdev
+docker_prod_image: ymca.ffwua.com:5000/dbprod
 # This variable allows select type of installation. Can be overridden by CI server.
 # From installation profile = 'profile', from sql dump = 'sql'.
 workflow_type: 'sql'
@@ -45,7 +45,7 @@ backup_pass: givemebackup
 # In many cases this is production dump.
 old_site_db: false
 # TODO don't forget to update get_latest_db.sh when changing lines below
-source_backup_name: latest_dev.sql.gz
+source_backup_name: latest_prod.sql.gz
 old_source_backup_name: ymca20160218.sql.gz
 # URL to the source database. Can be overridden by CI server.
 source_database: http://{{ backup_user }}:{{ backup_pass }}@ymca.ffwua.com/backup/{{ source_backup_name }}
