--- a/docroot/devops/reinstall/vars/environments/default_env.yml
+++ b/docroot/devops/reinstall/vars/environments/default_env.yml
@@ -11,12 +11,19 @@ env:
     - { name: '$config_directories["staging"]', status: true, value: 'sites/default/config/staging' }
     - { name: '$settings["install_profile"]', status: true, value: 'pp' }
     - { name: '$config["system.file"]["path"]["temporary"]', status: true, value: '/tmp' }
+    - { name: '$settings["memcache"]["bins"]', status: true, value: '[\\"default\\" => \\"default\\"]' }
+    - { name: '$settings["memcache"]["key_prefix"]', status: true, value: '{{ mysql_db }}' }
+    - { name: '$settings["cache"]["default"]', status: true, value: 'cache.backend.memcache' }
+  pre_drush_commands:
+    - { name: 'php-eval', status: true, arguments: "\"\\Drupal::keyValue('system.schema')->set('ymca_master', 8259);\"" }
+    - { name: 'en', status: true, arguments: "openy_upgrade_tool, ymca_migrate_landing_page, openy_block_basic, openy_prgf_secondary_description_sidebar, rabbit_hole, focal_point, blazy, openy_prgf_banner" }
   shell_commands:
-    # @todo Remove after OpenY Migration.
-    - { name: '[Openy Migrate] Updating OpenY', status: true, arguments: "echo system serialization syslog file node rest entity_browser file_browser dropzonejs openy | xargs -n 1 | xargs -I item bin/drupal update:execute item"}
+    # @todo Set status false after OpenY Migration.
+    - { name: '[Openy Migrate] UpdatingOpenY', status: true, arguments: "echo system serialization syslog file node rest entity_browser file_browser dropzonejs openy | xargs -n 1 | xargs -I item bin/drupal update:execute item"}
     - { name: '[Openy Migrate] Updating YMCA Master specific updates', status: true, arguments: "echo 8234 8235 8236 8237 8238 8239 8240 8241 8242 8243 8244 8245 8246 8247 8248 8249 8250 8251 8252 8253 8254 8255 8256 8257 8258 | xargs -n 1 | xargs -I item bin/drupal update:execute ymca_master item"}
+    - { name: '[Openy Migrate] Updating OpenY related features', status: true, arguments: "echo openy_txnm_color | xargs -n 1 | xargs -I item bin/drupal update:execute item"}
+    - { name: '[Openy Migrate] Updating OpenY related features', status: false, arguments: "echo webform redirect crop openy_media openy_media_document openy_media_video openy_node openy_node_landing openy_txnm_color openy_prgf_small_banner openy_prgf_simple_content openy_prgf_2c openy_block_custom_simple openy_prgf | xargs -n 1 | xargs -I item bin/drupal update:execute item"}
     - { name: '[Openy Migrate] Updating YMCA Master remaining updates', status: true, arguments: "bin/drupal update:execute ymca_master"}
-    - { name: '[Openy Migrate] Updating OpenY related features', status: true, arguments: "echo webform redirect crop openy_media openy_media_document openy_media_video openy_node openy_node_landing openy_txnm_color openy_prgf_small_banner openy_prgf_simple_content openy_prgf_2c openy_block_custom_simple openy_prgf | xargs -n 1 | xargs -I item bin/drupal update:execute item"}
   modules:
     - { name: 'config_inspector dblog stage_file_proxy', status: true }
   drush_commands:
