--- a/docroot/devops/reinstall/vars/environments/demo_env.yml
+++ b/docroot/devops/reinstall/vars/environments/demo_env.yml
@@ -9,6 +9,7 @@ env:
     - { name: '$databases["amm_source"]["default"]["namespace"]', status: true, value: 'Drupal\\\\Core\\\\Database\\\\Driver\\\\mysql' }
     - { name: '$databases["amm_source"]["default"]["driver"]', status: true, value: 'mysql' }
     - { name: '$config_directories["staging"]', status: true, value: 'sites/default/config/staging' }
+  pre_drush_commands: []
   shell_commands: []
   modules:
     - { name: 'config_inspector dblog stage_file_proxy ymca_mindbody', status: true }
