--- a/composer.json
+++ b/composer.json
@@ -130,7 +130,7 @@
         {
             "type": "package",
             "package": {
-                "name": "library-grt-youtube-popup",
+                "name": "grt-youtube-popup",
                 "version": "1.0.0",
                 "type": "drupal-library",
                 "source": {
@@ -228,7 +228,7 @@
         "library-ckeditor/panelbutton": "4.7.0",
         "library-ckeditor/colorbutton": "4.7.0",
         "library-smonetti/btbutton": "1.0.1",
-        "library-grt-youtube-popup": "^1.0",
+        "grt-youtube-popup": "^1.0",
         "drupal/slick_views": "1.0-rc2",
         "drupal/libraries": "3.x-dev",
         "drupal/datalayer": "1.x-dev",
