--- a/modules/openy_features/openy_prgf/modules/openy_prgf_block_date/openy_prgf_block_date.info.yml
+++ b/modules/openy_features/openy_prgf/modules/openy_prgf_block_date/openy_prgf_block_date.info.yml
@@ -1,5 +1,6 @@
 name: 'OpenY Paragraph for Date Block'
 description: 'OpenY Paragraph shows content based on date and time (before, between, after).'
+package: OpenY
 type: module
 core: 8.x
 dependencies:
