--- a/modules/openy_features/openy_prgf/modules/openy_prgf_lto/openy_prgf_lto.info.yml
+++ b/modules/openy_features/openy_prgf/modules/openy_prgf_lto/openy_prgf_lto.info.yml
@@ -1,5 +1,6 @@
 name: 'OpenY Paragraph Limited Time Offer'
 description: 'Limited Time Offer Paragraph for Home Page based on Landing Page CT.'
+package: OpenY
 type: module
 core: 8.x
 dependencies:
