--- a/openy.services.yml
+++ b/openy.services.yml
@@ -5,3 +5,6 @@ services:
     class: Drupal\openy\Routing\RouteSubscriber
     tags:
       - { name: event_subscriber }
+  openy.modules_manager:
+    class: Drupal\openy\OpenyModulesManager
+    arguments: ['@entity_type.manager']
