--- a/openy.info.yml
+++ b/openy.info.yml
@@ -2,7 +2,7 @@ name: OpenY
 type: profile
 description: 'Open Y Drupal distribution.'
 core: 8.x
-version: '8.1.11'
+version: '8.1.12-dev'
 distribution:
   name: OpenY
   install:
