--- a/docroot/modules/features/ygtc_media_bundles/ygtc_media_bundles.info.yml
+++ b/docroot/modules/features/ygtc_media_bundles/ygtc_media_bundles.info.yml
@@ -1,11 +1,13 @@
 name: 'YGTC Media Bundles'
-description: 'Implements media bundles for YGTC.'
+description: 'Implements YGTC media bundles.'
 type: module
 core: 8.x
 dependencies:
+  - blazy
   - block
-  - media_entity
   - metatag
+  - openy_media_image
+  - openy_prgf_small_banner
   - page_manager
   - user
   - views
