--- a/modules/openy_features/openy_node/modules/openy_node_social_post/openy_node_social_post.info.yml
+++ b/modules/openy_features/openy_node/modules/openy_node_social_post/openy_node_social_post.info.yml
@@ -14,7 +14,10 @@ dependencies:
   - link
   - menu_ui
   - node
+  - openy_node_category
+  - openy_node_social_post
   - path
+  - responsive_image
   - scheduler
   - text
   - user
