OS-28: remove social networks keys.

--- a/modules/openy_features/openy_node/modules/openy_node_social_post/config/install/social_feed_fetcher.settings.yml
+++ b/modules/openy_features/openy_node/modules/openy_node_social_post/config/install/social_feed_fetcher.settings.yml
@@ -1,21 +1,21 @@
 facebook_enabled: true
-fb_page_name: ZICCU.DEv
-fb_app_id: '487028581351050'
-fb_secret_key: e7cab8bb10daee0a3689272dc55fac11
+fb_page_name:
+fb_app_id: ''
+fb_secret_key:
 fb_no_feeds: 10
 instagram_enabled: true
-in_client_id: sanyok.medved86
-in_redirect_uri: 'http://openy.docksal'
+in_client_id:
+in_redirect_uri: ''
 in_auth_link: ''
-in_access_token: 5945953665.4487979.0e247cdb8aeb408588caa04a6c714cd8
+in_access_token:
 in_picture_count: 10
 in_picture_resolution: standard_resolution
 in_post_link: true
 twitter_enabled: true
-tw_consumer_key: Gnlh0CKqNzSQpIndkR3JUdRVZ
-tw_consumer_secret: EUYqZHdyrNpTZURpimE0JbaaxgPZWkJ5GIiy1CYlLfwCJo2n9s
-tw_access_token: 353190450-42gTHGRJvHDbBMbzmK4ct9xg6PMX9EoqfUbcohoy
-tw_access_token_secret: mkbHRnY5jcDB3Qd1BX7zc521XuvF4OiBYcN0TyOer44eW
+tw_consumer_key:
+tw_consumer_secret:
+tw_access_token:
+tw_access_token_secret:
 tw_count: 10
 last: ''
 submit: 'Run cron now'
