--- a/docroot/devops/reinstall/vars/environments/default_env.yml
+++ b/docroot/devops/reinstall/vars/environments/default_env.yml
@@ -26,7 +26,7 @@ env:
     - { name: '[Openy Migrate] Updating YMCA Master specific updates', status: true, arguments: "echo 8258 | xargs -n 1 | xargs -I item bin/drupal update:execute ymca_master item"}
     - { name: '[Openy Migrate] Updating OpenY related features', status: true, arguments: "echo webform redirect crop openy_media openy_media_document openy_media_video openy_node openy_node_landing openy_txnm_color openy_prgf_small_banner openy_prgf_simple_content openy_prgf_2c openy_block_custom_simple openy_prgf | xargs -n 1 | xargs -I item bin/drupal update:execute item"}
     - { name: '[Openy Migrate] Updating YMCA Master specific updates', status: false, arguments: "echo 8262 | xargs -n 1 | xargs -I item bin/drupal update:execute ymca_master item"}
-    - { name: '[Openy Migrate] Updating YMCA Master remaining updates', status: false, arguments: "bin/drupal update:execute ymca_master"}
+    - { name: '[Openy Migrate] Updating YMCA Master remaining updates', status: true, arguments: "bin/drupal update:execute ymca_master"}
   modules:
     - { name: 'config_inspector dblog stage_file_proxy', status: true }
   drush_commands:
