--- a/modules/openy_features/openy_node/modules/openy_node_social_post/config/install/social_feed_fetcher.settings.yml
+++ b/modules/openy_features/openy_node/modules/openy_node_social_post/config/install/social_feed_fetcher.settings.yml
@@ -1,21 +1,21 @@
 facebook_enabled: true
-fb_page_name:
+fb_page_name: null
 fb_app_id: ''
-fb_secret_key:
+fb_secret_key: null
 fb_no_feeds: 10
 instagram_enabled: true
-in_client_id:
+in_client_id: null
 in_redirect_uri: ''
 in_auth_link: ''
-in_access_token:
+in_access_token: null
 in_picture_count: 10
 in_picture_resolution: standard_resolution
 in_post_link: true
 twitter_enabled: true
-tw_consumer_key:
-tw_consumer_secret:
-tw_access_token:
-tw_access_token_secret:
+tw_consumer_key: null
+tw_consumer_secret: null
+tw_access_token: null
+tw_access_token_secret: null
 tw_count: 10
 last: ''
 submit: 'Run cron now'
