OS-28: make social block as paragraph.

--- a/modules/openy_features/openy_node/modules/openy_node_social_post/config/install/responsive_image.styles.social_post_preview.yml
+++ b/modules/openy_features/openy_node/modules/openy_node_social_post/config/install/responsive_image.styles.social_post_preview.yml
@@ -4,6 +4,9 @@ dependencies:
   config:
     - image.style.node_program_subcategory_teaser
     - image.style.social_post_preview
+    - responsive_image.styles.social_post_preview
+  module:
+    - responsive_image
 id: social_post_preview
 label: 'Social post preview'
 image_style_mappings:
