--- a/modules/openy_features/openy_node/modules/openy_node_social_post/openy_node_social_post.info.yml
+++ b/modules/openy_features/openy_node/modules/openy_node_social_post/openy_node_social_post.info.yml
@@ -8,6 +8,7 @@ dependencies:
   - block
   - content_moderation
   - ctools
+  - datalayer
   - datetime
   - field
   - file
@@ -16,8 +17,9 @@ dependencies:
   - menu_ui
   - node
   - openy_node_category
-  - openy_node_social_post
+  - paragraphs
   - path
+  - plugin
   - responsive_image
   - scheduler
   - social_feed_fetcher
