--- a/docroot/modules/features/ygtc_page_and_location/config/install/core.entity_view_display.node.article.default.yml
+++ b/docroot/modules/features/ygtc_page_and_location/config/install/core.entity_view_display.node.article.default.yml
@@ -3,11 +3,11 @@ status: true
 dependencies:
   config:
     - field.field.node.article.field_alert
-    - field.field.node.article.field_ygtc_content
     - field.field.node.article.field_header_button
     - field.field.node.article.field_header_image
     - field.field.node.article.field_header_variant
     - field.field.node.article.field_lead_description
+    - field.field.node.article.field_page_meta
     - field.field.node.article.field_promo_slideshow
     - field.field.node.article.field_related
     - field.field.node.article.field_secondary_sidebar
@@ -17,19 +17,46 @@ dependencies:
     - field.field.node.article.field_tags
     - field.field.node.article.field_template
     - field.field.node.article.field_title_description
+    - field.field.node.article.field_ygtc_content
     - image.style.2013_masthead
     - node.type.article
   module:
-    - image
+    - media_entity
     - options
+    - panelizer
     - text
     - user
+    - views_field_formatter
     - ymca_link_formatter
+third_party_settings:
+  panelizer:
+    enable: false
+    custom: false
+    allow: false
+    default: default
 id: node.article.default
 targetEntityType: node
 bundle: article
 mode: default
 content:
+  addthis:
+    label: hidden
+    type: views_field_formatter
+    weight: 14
+    region: content
+    settings:
+      view: ''
+      arguments:
+        field_value:
+          checked: true
+        entity_id:
+          checked: true
+        delta:
+          checked: true
+      multiple: false
+      hide_empty: false
+      implode_character: ''
+    third_party_settings: {  }
   field_alert:
     type: entity_reference_label
     weight: 10
@@ -52,13 +79,13 @@ content:
     third_party_settings: {  }
     region: content
   field_header_image:
-    type: image
     weight: 4
     label: above
     settings:
       image_style: 2013_masthead
       image_link: ''
     third_party_settings: {  }
+    type: media_thumbnail
     region: content
   field_lead_description:
     type: text_default
@@ -105,14 +132,14 @@ content:
     third_party_settings: {  }
     region: content
   field_state:
-    weight: 13
+    weight: 12
     type: list_default
     label: above
     settings: {  }
     third_party_settings: {  }
     region: content
   field_template:
-    weight: 14
+    weight: 13
     label: above
     settings: {  }
     third_party_settings: {  }
@@ -134,9 +161,9 @@ content:
     region: content
   links:
     weight: 0
+    region: content
     settings: {  }
     third_party_settings: {  }
-    region: content
 hidden:
   field_content: true
   field_header_variant: true
