--- a/docroot/modules/features/ygtc_page_and_location/config/install/core.entity_view_display.node.article.full.yml
+++ b/docroot/modules/features/ygtc_page_and_location/config/install/core.entity_view_display.node.article.full.yml
@@ -4,11 +4,11 @@ dependencies:
   config:
     - core.entity_view_mode.node.full
     - field.field.node.article.field_alert
-    - field.field.node.article.field_ygtc_content
     - field.field.node.article.field_header_button
     - field.field.node.article.field_header_image
     - field.field.node.article.field_header_variant
     - field.field.node.article.field_lead_description
+    - field.field.node.article.field_page_meta
     - field.field.node.article.field_promo_slideshow
     - field.field.node.article.field_related
     - field.field.node.article.field_secondary_sidebar
@@ -16,20 +16,48 @@ dependencies:
     - field.field.node.article.field_sidebar_navigation
     - field.field.node.article.field_state
     - field.field.node.article.field_tags
+    - field.field.node.article.field_template
     - field.field.node.article.field_title_description
+    - field.field.node.article.field_ygtc_content
     - image.style.2013_masthead
     - node.type.article
   module:
-    - image
+    - media_entity
     - options
+    - panelizer
     - text
     - user
+    - views_field_formatter
     - ymca_link_formatter
+third_party_settings:
+  panelizer:
+    enable: false
+    custom: false
+    allow: false
+    default: default
 id: node.article.full
 targetEntityType: node
 bundle: article
 mode: full
 content:
+  addthis:
+    label: hidden
+    type: views_field_formatter
+    weight: 8
+    region: content
+    settings:
+      view: ''
+      arguments:
+        field_value:
+          checked: true
+        entity_id:
+          checked: true
+        delta:
+          checked: true
+      multiple: false
+      hide_empty: false
+      implode_character: ''
+    third_party_settings: {  }
   field_header_button:
     type: link_advanced_formatter
     weight: 5
@@ -44,14 +72,14 @@ content:
     third_party_settings: {  }
     region: content
   field_header_image:
-    type: image
+    type: media_thumbnail
     weight: 4
+    region: content
     label: hidden
     settings:
       image_style: 2013_masthead
       image_link: ''
     third_party_settings: {  }
-    region: content
   field_lead_description:
     type: text_default
     weight: 6
