--- a/docroot/modules/features/ygtc_page_and_location/config/install/core.entity_view_display.node.article.rss.yml
+++ b/docroot/modules/features/ygtc_page_and_location/config/install/core.entity_view_display.node.article.rss.yml
@@ -4,11 +4,10 @@ dependencies:
   config:
     - core.entity_view_mode.node.rss
     - field.field.node.article.field_alert
-    - field.field.node.article.field_ygtc_content
     - field.field.node.article.field_header_button
-    - field.field.node.article.field_header_image
     - field.field.node.article.field_header_variant
     - field.field.node.article.field_lead_description
+    - field.field.node.article.field_page_meta
     - field.field.node.article.field_promo_slideshow
     - field.field.node.article.field_related
     - field.field.node.article.field_secondary_sidebar
@@ -16,7 +15,9 @@ dependencies:
     - field.field.node.article.field_sidebar_navigation
     - field.field.node.article.field_state
     - field.field.node.article.field_tags
+    - field.field.node.article.field_template
     - field.field.node.article.field_title_description
+    - field.field.node.article.field_ygtc_content
     - node.type.article
   module:
     - user
@@ -25,6 +26,14 @@ targetEntityType: node
 bundle: article
 mode: rss
 content:
+  addthis:
+    label: hidden
+    type: string
+    weight: 100
+    region: content
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
   links:
     weight: 100
     region: content
@@ -32,7 +41,6 @@ hidden:
   field_alert: true
   field_content: true
   field_header_button: true
-  field_header_image: true
   field_header_variant: true
   field_lead_description: true
   field_page_meta: true
