--- a/modules/openy_features/openy_prgf/modules/openy_prgf_1c/openy_prgf_1c.info.yml
+++ b/modules/openy_features/openy_prgf/modules/openy_prgf_1c/openy_prgf_1c.info.yml
@@ -3,6 +3,7 @@ description: 'Implements a paragraph with 1 column.'
 type: module
 core: 8.x
 package: OpenY
+version: '8.x-1.0'
 dependencies:
   - block_content
   - entity_browser_entity_form
