--- a/modules/openy_features/openy_prgf/modules/openy_prgf_2c/openy_prgf_2c.info.yml
+++ b/modules/openy_features/openy_prgf/modules/openy_prgf_2c/openy_prgf_2c.info.yml
@@ -3,6 +3,7 @@ description: 'Implements a paragraph with 2 columns.'
 type: module
 core: 8.x
 package: OpenY
+version: '8.x-1.0'
 dependencies:
   - block_content
   - entity_browser_entity_form
@@ -11,5 +12,4 @@ dependencies:
   - language
   - openy_block_custom_simple
   - openy_block_flexible_content
-  - openy_prgf_1c
   - paragraphs
