--- a/modules/openy_features/openy_prgf/modules/openy_prgf_3c/openy_prgf_3c.info.yml
+++ b/modules/openy_features/openy_prgf/modules/openy_prgf_3c/openy_prgf_3c.info.yml
@@ -3,6 +3,7 @@ description: 'Implements a paragraph with 3 columns.'
 type: module
 core: 8.x
 package: OpenY
+version: '8.x-1.0'
 dependencies:
   - block_content
   - entity_browser_entity_form
@@ -11,5 +12,4 @@ dependencies:
   - language
   - openy_block_branch_amenities
   - openy_prgf
-  - openy_prgf_1c
   - paragraphs
