--- a/modules/openy_features/openy_block/modules/openy_block_flexible_content/openy_block_flexible_content.info.yml
+++ b/modules/openy_features/openy_block/modules/openy_block_flexible_content/openy_block_flexible_content.info.yml
@@ -3,6 +3,7 @@ description: 'Implements Flexible Content Block'
 type: module
 core: 8.x
 package: OpenY
+version: '8.x-1.0'
 dependencies:
   - block_content
   - field
