[OPENY-20] openy_block_branch_amenities decoupling

--- a/modules/openy_features/openy_prgf/modules/openy_prgf_4c/openy_prgf_4c.info.yml
+++ b/modules/openy_features/openy_prgf/modules/openy_prgf_4c/openy_prgf_4c.info.yml
@@ -5,12 +5,12 @@ core: 8.x
 package: OpenY
 version: '8.x-1.0'
 dependencies:
-  - block_content
   - entity_browser_entity_form
   - field
   - inline_entity_form
   - language
   - link
+  - openy_block_custom_simple
   - openy_prgf
   - paragraphs
   - text
