OS-28: code refactoring and minor fixes.

--- a/modules/openy_features/openy_node/modules/openy_node_social_post/config/install/field.field.node.social_post.field_platform.yml
+++ b/modules/openy_features/openy_node/modules/openy_node_social_post/config/install/field.field.node.social_post.field_platform.yml
@@ -9,7 +9,7 @@ field_name: field_platform
 entity_type: node
 bundle: social_post
 label: Platform
-description: ''
+description: 'Field is used as marker with the name of social network where post was imported from.'
 required: true
 translatable: false
 default_value: {  }
