--- a/modules/openy_features/openy_node/modules/openy_node_social_post/config/install/field.field.node.social_post.field_link.yml
+++ b/modules/openy_features/openy_node/modules/openy_node_social_post/config/install/field.field.node.social_post.field_link.yml
@@ -5,13 +5,14 @@ dependencies:
     - field.storage.node.field_link
     - node.type.social_post
   module:
+    - datalayer
     - link
 id: node.social_post.field_link
 field_name: field_link
 entity_type: node
 bundle: social_post
 label: Link
-description: ''
+description: 'Link to the original post in social network. '
 required: false
 translatable: false
 default_value: {  }
