--- a/modules/openy_features/openy_node/modules/openy_node_social_post/config/install/field.field.node.social_post.field_post.yml
+++ b/modules/openy_features/openy_node/modules/openy_node_social_post/config/install/field.field.node.social_post.field_post.yml
@@ -5,13 +5,14 @@ dependencies:
     - field.storage.node.field_post
     - node.type.social_post
   module:
+    - datalayer
     - text
 id: node.social_post.field_post
 field_name: field_post
 entity_type: node
 bundle: social_post
 label: Post
-description: ''
+description: 'The text of the post. It can contains html markup. '
 required: true
 translatable: false
 default_value: {  }
