--- a/modules/openy_features/openy_node/modules/openy_node_social_post/config/install/field.field.node.social_post.field_posted.yml
+++ b/modules/openy_features/openy_node/modules/openy_node_social_post/config/install/field.field.node.social_post.field_posted.yml
@@ -5,13 +5,14 @@ dependencies:
     - field.storage.node.field_posted
     - node.type.social_post
   module:
+    - datalayer
     - datetime
 id: node.social_post.field_posted
 field_name: field_posted
 entity_type: node
 bundle: social_post
 label: Posted
-description: ''
+description: 'The date when original post was posted into social network.'
 required: true
 translatable: false
 default_value: {  }
