--- a/modules/openy_features/openy_node/modules/openy_node_social_post/config/install/field.field.node.social_post.field_sp_image.yml
+++ b/modules/openy_features/openy_node/modules/openy_node_social_post/config/install/field.field.node.social_post.field_sp_image.yml
@@ -5,33 +5,34 @@ dependencies:
     - field.storage.node.field_sp_image
     - node.type.social_post
   module:
+    - datalayer
     - image
 id: node.social_post.field_sp_image
 field_name: field_sp_image
 entity_type: node
 bundle: social_post
 label: Image
-description: ''
+description: 'Post Image. Contains Image of the post from social network. User can change it and upload new image. Image format can be: png, gif, jpg, jpeg'
 required: false
-translatable: fasle
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings:
-  alt_field: fasle
-  alt_field_required: fasle
-  title_field: false
-  title_field_required: false
+  file_directory: 'social-feed-[date:custom:Y]-[date:custom:m]'
+  file_extensions: 'png gif jpg jpeg'
+  max_filesize: ''
   max_resolution: ''
   min_resolution: ''
+  alt_field: false
+  alt_field_required: false
+  title_field: false
+  title_field_required: false
   default_image:
-    uuid: null
+    uuid: ''
     alt: ''
     title: ''
     width: null
     height: null
-  file_directory: 'social-feed-[date:custom:Y]-[date:custom:m]'
-  file_extensions: 'png gif jpg jpeg'
-  max_filesize: ''
   handler: 'default:file'
   handler_settings: {  }
 field_type: image
