--- a/modules/openy_features/openy_node/modules/openy_node_social_post/config/install/views.view.social_posts_view.yml
+++ b/modules/openy_features/openy_node/modules/openy_node_social_post/config/install/views.view.social_posts_view.yml
@@ -36,8 +36,12 @@ display:
         options:
           perm: 'access content'
       cache:
-        type: tag
-        options: {  }
+        type: time
+        options:
+          results_lifespan: 3600
+          results_lifespan_custom: 0
+          output_lifespan: 3600
+          output_lifespan_custom: 0
       query:
         type: views_query
         options:
