OS-28: add decriptions for prgrf fields.

--- a/modules/openy_features/openy_node/modules/openy_node_social_post/config/install/field.field.paragraph.social_list.field_prgrf_sl_block.yml
+++ b/modules/openy_features/openy_node/modules/openy_node_social_post/config/install/field.field.paragraph.social_list.field_prgrf_sl_block.yml
@@ -16,7 +16,7 @@ field_name: field_prgrf_sl_block
 entity_type: paragraph
 bundle: social_list
 label: 'Social List'
-description: ''
+description: 'Reference to views block. This block select social posts which were imported before.'
 required: false
 translatable: false
 default_value:
