--- a/modules/openy_features/openy_node/modules/openy_node_social_post/config/install/field.field.paragraph.social_list.field_prgrf_sl_description.yml
+++ b/modules/openy_features/openy_node/modules/openy_node_social_post/config/install/field.field.paragraph.social_list.field_prgrf_sl_description.yml
@@ -16,7 +16,7 @@ field_name: field_prgrf_sl_description
 entity_type: paragraph
 bundle: social_list
 label: Description
-description: ''
+description: 'Block Description. You can add text here if your block needs in Description.'
 required: false
 translatable: false
 default_value: {  }
