--- a/modules/openy_features/openy_node/modules/openy_node_social_post/config/install/field.field.paragraph.social_list.field_prgrf_sl_title.yml
+++ b/modules/openy_features/openy_node/modules/openy_node_social_post/config/install/field.field.paragraph.social_list.field_prgrf_sl_title.yml
@@ -15,7 +15,7 @@ field_name: field_prgrf_sl_title
 entity_type: paragraph
 bundle: social_list
 label: Title
-description: ''
+description: 'Block title. You can add text here if your block needs in title.'
 required: false
 translatable: false
 default_value: {  }
