--- a/docroot/profiles/contrib/openy/modules/openy_features/openy_editor/openy_editor.info.yml
+++ b/docroot/profiles/contrib/openy/modules/openy_features/openy_editor/openy_editor.info.yml
@@ -4,8 +4,10 @@ core: 8.x
 package: OpenY
 dependencies:
   - ckeditor
+  - colorbutton
   - editor
   - entity_embed
   - filter
+  - rel_to_abs
   - token_filter
-  - colorbutton
+  - ymca_entity_embed
