--- a/docroot/profiles/contrib/openy/modules/openy_features/openy_editor/config/install/editor.editor.full_html.yml
+++ b/docroot/profiles/contrib/openy/modules/openy_features/openy_editor/config/install/editor.editor.full_html.yml
@@ -16,22 +16,17 @@ settings:
           items:
             - Bold
             - Italic
-            - Underline
             - Strike
-            - JustifyLeft
-            - JustifyCenter
-            - JustifyRight
-            - JustifyBlock
-            - TextColor
-            - BGColor
-            - Outdent
-            - Indent
-            - Format
+            - Superscript
+            - Subscript
+            - '-'
+            - RemoveFormat
         -
-          name: Links
+          name: Linking
           items:
             - DrupalLink
             - DrupalUnlink
+            - Linkit
         -
           name: Lists
           items:
@@ -41,27 +36,49 @@ settings:
           name: Media
           items:
             - Blockquote
-            - embed_video
-            - embed_local_video
-            - embed_image
+            - Table
+            - HorizontalRule
+            - block
+            - menu_link
+            - file_browser
+            - webform
             - embed_document
+            - embed_image
+        -
+          name: 'Block Formatting'
+          items:
+            - Format
+            - Styles
         -
           name: Tools
           items:
-            - Table
+            - ShowBlocks
             - Source
-            - SpecialChar
-            - Maximize
-            - Language
+        -
+          name: Templates
+          items:
+            - ColumnButton2x
+            - ColumnButton3x
+            - SportsPromo
+            - Green3Columns
+            - ClinicsSchedule
+            - SessionSchedules
+            - SportsTopSubheader
+            - TextColor
   plugins:
+    stylescombo:
+      styles: "p.button|Button\r\nspan.icon-clock|Clock icon"
     language:
       language_list: un
-    stylescombo:
-      styles: ''
+    font:
+      font_names: ''
+      font_sizes: ''
     colorbutton:
-      colors: '5c2e91,92278f,c6168d,0060af,0089d0,00aeef,006b6b,01a490,20bdbe,dd5828,f47920,fcaf17,a92b31,ed1c24,f15922'
+      colors: '20bdbe,01a490,006b6b,00aeef,0089d0,0060af,c6168d,92278f,5c2e91,f15922,ed1c24,a92b31,fcaf17,f47920,dd5828,ffffff,636466,231f20'
+    linkit:
+      linkit_profile: openy_linkit
 image_upload:
-  status: false
+  status: true
   scheme: public
   directory: inline-images
   max_size: ''
