[OPENY-30] Basic block - component decoupling: update paragraph entity reference fields, that reference blocks

--- a/modules/openy_features/openy_prgf/modules/openy_prgf_secondary_description_sidebar/openy_prgf_secondary_description_sidebar.info.yml
+++ b/modules/openy_features/openy_prgf/modules/openy_prgf_secondary_description_sidebar/openy_prgf_secondary_description_sidebar.info.yml
@@ -7,8 +7,6 @@ version: '8.x-1.0'
 dependencies:
   - datalayer
   - field
-  - openy_block_basic
-  - openy_block_custom_simple
-  - openy_block_date
+  - openy_er
   - paragraphs
   - text
