--- a/docroot/modules/custom/yptf_kronos/yptf_kronos.links.menu.yml
+++ b/docroot/modules/custom/yptf_kronos/yptf_kronos.links.menu.yml
@@ -1,5 +1,5 @@
 yptf_kronos.settings:
-  title: Kronos Settings
+  title: Kronos Tuesday Settings
   route_name: yptf_kronos.settings
   parent: ymca_alters.admin_config_ymca_services
   description: 'Kronos service configuration.'
