--- a/docroot/modules/features/openy_kronos/config/install/yptf_kronos_monday.settings.yml
+++ b/docroot/modules/features/openy_kronos/config/install/yptf_kronos_monday.settings.yml
@@ -13,7 +13,7 @@ pt_managers:
   enabled: 1
   staff_type:
     481: '481'
-  subject: '[MON] [report-branch-name] - PT Hours Variance for [report-start-date] - [report-end-date]'
+  subject: 'PT Hours Payroll Correction Report for [report-start-date] - [report-end-date]'
   body:
     value: "<p>[pt-manager-report]</p>\r\n"
     format: full_html
