--- a/docroot/modules/features/openy_kronos/config/install/yptf_kronos.settings.yml
+++ b/docroot/modules/features/openy_kronos/config/install/yptf_kronos.settings.yml
@@ -2,7 +2,7 @@ leadership:
   enabled: 1
   staff_type:
     476: '476'
-  subject: '[TUE] Total PT Hours Variance for [report-start-date] - [report-end-date]'
+  subject: 'Total PT Hours Variance for [report-start-date] - [report-end-date]'
   body:
     value: "<p>[leadership-report]</p>\r\n"
     format: full_html
@@ -13,7 +13,7 @@ pt_managers:
   enabled: 1
   staff_type:
     481: '481'
-  subject: 'Final PT Hours Variance Report for [report-start-date] - [report-end-date]'
+  subject: '[report-branch-name] - PT Hours Variance for [report-start-date] - [report-end-date]'
   body:
     value: "<p>[pt-manager-report]</p>\r\n"
     format: full_html
