Finished up mobile menu.

--- a/themes/openy_themes/openy_carnation/openy_carnation.info.yml
+++ b/themes/openy_themes/openy_carnation/openy_carnation.info.yml
@@ -12,6 +12,7 @@ regions:
   logo: Logo
   primary_menu: Primary Menu
   secondary_menu: Secondary Menu
+  top_menu: Top menu
   mobile_menu: Mobile menu
   search: Search Form
   content: Content
