[OPENY-20] Use custom entity reference selection plugin for target_bundles

--- a/modules/openy_features/openy_prgf/modules/openy_prgf_1c/openy_prgf_1c.info.yml
+++ b/modules/openy_features/openy_prgf/modules/openy_prgf_1c/openy_prgf_1c.info.yml
@@ -6,6 +6,7 @@ package: OpenY
 version: '8.x-1.0'
 dependencies:
   - block_content
+  - datalayer
   - entity_browser_entity_form
   - field
   - inline_entity_form
