--- a/modules/openy_features/openy_prgf/modules/openy_prgf_3c/openy_prgf_3c.info.yml
+++ b/modules/openy_features/openy_prgf/modules/openy_prgf_3c/openy_prgf_3c.info.yml
@@ -5,6 +5,8 @@ core: 8.x
 package: OpenY
 version: '8.x-1.0'
 dependencies:
+  - block_content
+  - datalayer
   - entity_browser_entity_form
   - field
   - inline_entity_form
