--- a/modules/openy_features/openy_prgf/modules/openy_prgf_2c/config/install/field.field.paragraph.2c.field_prgf_2c_left.yml
+++ b/modules/openy_features/openy_prgf/modules/openy_prgf_2c/config/install/field.field.paragraph.2c.field_prgf_2c_left.yml
@@ -2,10 +2,14 @@ langcode: en
 status: true
 dependencies:
   config:
-    - block_content.type.flexible_content
-    - block_content.type.simple_block
     - field.storage.paragraph.field_prgf_2c_left
     - paragraphs.paragraphs_type.2c
+  module:
+    - datalayer
+third_party_settings:
+  datalayer:
+    expose: 0
+    label: field_prgf_2c_left
 id: paragraph.2c.field_prgf_2c_left
 field_name: field_prgf_2c_left
 entity_type: paragraph
@@ -17,13 +21,14 @@ translatable: true
 default_value: {  }
 default_value_callback: ''
 settings:
-  handler: 'default:block_content'
+  handler: 'default_no_dep:block_content'
   handler_settings:
-    target_bundles:
-      flexible_content: flexible_content
-      simple_block: simple_block
+    target_bundles: null
     sort:
       field: _none
-    auto_create: true
-    auto_create_bundle: ''
+    auto_create: 1
+    auto_create_bundle: flexible_content
+    target_bundles_no_dep:
+      flexible_content: flexible_content
+      simple_block: simple_block
 field_type: entity_reference
