[OPENY-20] Add paragraph descriptions

--- a/modules/openy_features/openy_prgf/modules/openy_prgf_2c/config/install/paragraphs.paragraphs_type.2c.yml
+++ b/modules/openy_features/openy_prgf/modules/openy_prgf_2c/config/install/paragraphs.paragraphs_type.2c.yml
@@ -4,5 +4,5 @@ dependencies: {  }
 id: 2c
 label: '2 columns'
 icon_uuid: null
-description: null
+description: 'Paragraph with 2 columns.'
 behavior_plugins: {  }
