--- a/modules/openy_features/openy_prgf/modules/openy_prgf_4c/config/install/paragraphs.paragraphs_type.4c.yml
+++ b/modules/openy_features/openy_prgf/modules/openy_prgf_4c/config/install/paragraphs.paragraphs_type.4c.yml
@@ -4,5 +4,5 @@ dependencies: {  }
 id: 4c
 label: '4 columns'
 icon_uuid: null
-description: null
+description: 'Paragraph with 4 columns.'
 behavior_plugins: {  }
