--- a/modules/openy_features/openy_prgf/modules/openy_prgf_1c/config/install/paragraphs.paragraphs_type.1c.yml
+++ b/modules/openy_features/openy_prgf/modules/openy_prgf_1c/config/install/paragraphs.paragraphs_type.1c.yml
@@ -4,5 +4,5 @@ dependencies: {  }
 id: 1c
 label: '1 column'
 icon_uuid: null
-description: null
+description: 'Paragraph with 1 column.'
 behavior_plugins: {  }
