--- a/modules/openy_features/openy_prgf/modules/openy_prgf_3c/config/install/paragraphs.paragraphs_type.3c.yml
+++ b/modules/openy_features/openy_prgf/modules/openy_prgf_3c/config/install/paragraphs.paragraphs_type.3c.yml
@@ -4,5 +4,5 @@ dependencies: {  }
 id: 3c
 label: '3 columns'
 icon_uuid: null
-description: null
+description: 'Paragraph with 3 columns.'
 behavior_plugins: {  }
